--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,7 @@ header{
 /*Vlog2 end*/
 /*footer start*/
 footer{
-	background-color: #efefef;
+	background-color: #f0f0f0;
 }
 .terms{
 	width: 30%;
